discussion/kv_engine/173320/173320_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-35297: Remove complete from the DCPBackfill::cancel path

DCPBackfill::cancel is invoked when shouldCancel returns true.
This only happens if:

* ActiveStream is dead
* ActiveStream has gone (weak_ptr cannot lock)

In either of those cases the complete function (implemented at the
BySeqno/ByID) level of the backfill should not be called.

1) If the ActiveStream has gone, complete will fail to lock the
   weak_ptr.
2) If the stream can be obtained, calling completeBackfill (or OSO
   equivalent) is pointless on a dead stream, for example any
   DcpResponse queued is going no where.

This commit aims to simplify based on the above description, removing
the call to complete from the cancel path. This makes the
implementation of complete much simpler as it doesn't need to consider
logging "cancel".

Change-Id: I01e786ada63888f46ac5eac01fd683b60d6f6717

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Jim Walker
Date: 2022-04-06 08:51:26.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-04-06 09:49:24.000000000
Message: 
Patch Set 1: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/37796/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/dcp/backfill_disk.cc:187:9:
error: use of undeclared identifier "EP_LOG_WARN"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/37796/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/16399/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/dcp/backfill_disk.cc:187:9: error: use of undeclared identifier "EP_LOG_WARN" [clang-diagnostic-error]
        EP_LOG_WARN(
        ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/16399/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/dcp/backfill_disk.cc:187:9:
error: use of undeclared identifier "EP_LOG_WARN" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/16399/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/44993/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/15335/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/18507/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/19204/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/26582/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/6116/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/17265/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/6056/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/18172/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
